<resources>
    <string name="app_name">SR 2020 LARP</string>
    <string name="title_activity_login">SR 2020 LARP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="prompt_login">ID персонажа</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_password_repeat">Пароль (еще раз)</string>
    <string name="action_register">Регистрация</string>
    <string name="action_sign_in">Вход</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="error_empty_password">Пароль не должен быть пустым</string>
    <string name="error_password_not_repeated">Пароли не совпадают</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_user_already_exist">Такой пользователь уже существует</string>
    <string name="error_field_required">Это поле обязательно к заполнению</string>
    <string name="choose_server_address_title">Введите адрес сервера</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Oк</string>

    <string name="backend_url">https://gateway.evarun.ru/api/v1/</string>
    <string name="qr_backend_url">https://models-manager.evarun.ru/qr/model/</string>
    <string name="model_engine_backend_url">https://model-engine.evarun.ru/</string>
    <string name="token_preference_key">backend_token</string>
    <string name="backend_url_key">backend_url</string>
    <string name="action_logout">Выход</string>
    <string name="action_wound">Ранение</string>

    <string name="account_balance">Баланс:</string>
    <string name="account_sin">SIN:</string>
    <string name="new_transfer">Новый перевод</string>
    <string name="transfer_receiver">Получатель</string>
    <string name="transfer_amount">Сумма</string>
    <string name="transfer_comment">Комментарий (опционально)</string>
    <string name="transfer_confirm">Перевести</string>
    <string name="insufficient_money">Недостаточно денег</string>

    <string name="enable_location">Для работы приложения необходимо включить доступ к местоположению</string>
    <string name="wounded">Тяжелое ранение</string>
    <string name="clinically_dead">Клиническая смерть</string>
    <string name="body_qr">Код для взаимодействия с телом</string>
    <string name="debug_self_revive">Отладка: самовоскрешение</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_to_clinical_death">Добить</string>
    <string name="inject_medication">Ввести препарат</string>
    <string name="qr">QR</string>

    <string name="economy">Экономика</string>
    <string name="charter">Персонаж</string>
    <string name="spellBoock">Книга заклинаний</string>
    <string name="spells">Активируемые способности</string>
    <string name="skills">Пассивные способности</string>
    <string name="buy_for_karma">Карма</string>
    <string name="ethics">Этика</string>
    <string name="history">История</string>
    <string name="timers">Таймеры</string>
    <string name="location">Местоположение</string>
    <string name="generateQR">Генерация QR-кода</string>
    <string name="settings">Настройки</string>
    <string name="implants">Импланты</string>
    <string name="autodoc">Автодок</string>

    <string name="wounded_title">Тяжелое ранение</string>
    <string name="wounded_subtitle_medkit_enabled">Имплант МедКит автоматически вылечит вас через 10 минут после ранения, ждите.</string>
    <string name="wounded_subtitle_medkit_cooldown">К сожалению, МедКит на кулдауне. Клиническая смерть наступит через полчаса после ранения.</string>
    <string name="wounded_subtitle_no_medkit">Клиническая смерть наступит через полчаса после ранения.</string>

    <string name="clinical_death_title">Клиническая смерть</string>
    <string name="clinical_death_subtitle">За вами приедет МЧС. Возможно.</string>

    <string name="absolute_death_title">Абсолютная смерть</string>
    <string name="absolute_death_subtitle">Вам уже ничего не поможет. Дайте поиграть с вашим телом и идите в мертвятник.</string>
    <string name="consume">Употребить</string>
    <string name="learn">Изучить</string>

</resources>
