<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/newTransferGroup" android:id="@+id/balanceGroup">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_balance"
                    android:id="@+id/labelBalance" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewBalance"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textAlignment="viewEnd"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/newTransferGroup" android:id="@+id/sinGroup">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_sin"
                    android:id="@+id/labelSin" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewSin"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textAlignment="viewEnd"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/balanceGroup"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/balanceGroup"
                android:id="@+id/newTransferGroup"
                android:layout_marginTop="24dp">
            <TextView
                    android:text="@string/new_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textNewTransfer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextRecipient" android:hint="@string/transfer_receiver"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextAmount" android:hint="@string/transfer_amount"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextTransferComment" android:hint="@string/transfer_comment"/>
            <Button
                    android:text="@string/transfer_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/buttonTransfer"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
